fix navbar collapse

--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -22,7 +22,7 @@
     max-height: 45px;
 }
 
-.small-img-override {
+#small-img-override {
     height: auto;
     width: auto;
     max-width: 20px;
@@ -34,7 +34,6 @@
 #modal-content-override {
     border: 20px solid #634832;
     border-radius: 50px;
-
 }
 
 #modal-label-signup {
